<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="com.imatbd.skynet.NavFragments.AddCustomerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/MyEditText.Register"
                android:hint="@string/enter_customer_name"
                android:id="@+id/name"/>

            <EditText
                android:layout_marginTop="@dimen/default_padding"
                style="@style/MyEditText.Register"
                android:hint="@string/enter_customer_email"
                android:layout_below="@+id/name"
                android:inputType="textEmailAddress"
                android:id="@+id/email"/>

            <EditText
                android:layout_marginTop="@dimen/default_padding"
                style="@style/MyEditText.Register"
                android:hint="@string/enter_customer_phone_number"
                android:layout_below="@+id/email"
                android:inputType="phone"
                android:id="@+id/phone"/>

            <EditText
                android:layout_marginTop="@dimen/default_padding"
                style="@style/MyEditText.Register"
                android:hint="@string/enter_shop_name"
                android:layout_below="@+id/phone"
                android:id="@+id/shop_name"/>

            <EditText
                android:layout_marginTop="@dimen/default_padding"
                style="@style/MyEditText.Register"
                android:layout_height="100dp"
                android:maxLines="4"
                android:lines="4"
                android:gravity="top"
                android:hint="@string/enter_shop_address"
                android:layout_below="@+id/shop_name"
                android:id="@+id/address"/>



            <Button
                android:layout_marginTop="@dimen/default_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/create_customer"
                android:id="@+id/create_agent"
                android:layout_below="@+id/address"/>

        </RelativeLayout>
    </ScrollView>

</FrameLayout>
