<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="com.imatbd.skynet.NavFragments.AddAgentFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/MyEditText.Register"
                android:hint="@string/enter_agent_name"
                android:id="@+id/name"/>

            <EditText
                android:layout_marginTop="@dimen/default_padding"
                style="@style/MyEditText.Register"
                android:hint="@string/enter_agent_email"
                android:layout_below="@+id/name"
                android:inputType="textEmailAddress"
                android:id="@+id/email"/>

            <EditText
                android:layout_marginTop="@dimen/default_padding"
                style="@style/MyEditText.Register"
                android:hint="Enter Agent Phone Number"
                android:layout_below="@+id/email"
                android:inputType="phone"
                android:id="@+id/phone"/>

            <Button
                android:layout_marginTop="@dimen/default_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/create_agent"
                android:id="@+id/create_agent"
                android:layout_below="@+id/phone"/>

        </RelativeLayout>
    </ScrollView>







</RelativeLayout>
