<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imatbd.skynet.Activities.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MaterialAnimations.TextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/material_animations_primary"
        android:elevation="@dimen/elevation_header">

        <TextView
            android:id="@+id/title"
            style="@style/MaterialAnimations.TextAppearance.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:transitionName="title"
            android:text="@string/app_name" />

        <RelativeLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/small_padding"
            android:visibility="gone"
            android:clickable="true"
            android:id="@+id/cart">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cart"
                android:id="@+id/cart_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Large"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:id="@+id/cart_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/small_padding"
            android:clickable="true"
            android:visibility="gone"
            android:id="@+id/notification_container">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/noti"
                android:id="@+id/noti_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Large"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:id="@+id/noti_text"/>

        </RelativeLayout>





    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/default_padding">

        <EditText
            android:layout_width="match_parent"
            style="@style/MyEditText.Register"
            android:hint="@string/code_hint"
            android:id="@+id/et_code"/>

        <Button
            android:layout_marginTop="@dimen/default_padding"
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
           style="@style/MyButton"
            android:layout_below="@+id/et_code"
            android:text="@string/activate"
            android:id="@+id/btn_activate"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_activate"
            android:id="@+id/btn_test"
            android:text="Intent Service Test"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_test"
            android:id="@+id/btn_query"
            android:text="Query"/>







    </RelativeLayout>

</RelativeLayout>
